style: fix tick counter bar alignment and color

--- a/packages/components/src/components/contract-card/contract-card.scss
+++ b/packages/components/src/components/contract-card/contract-card.scss
@@ -719,8 +719,7 @@
     }
     &__text {
         position: absolute;
-        color: var(--status-success);
+        color: var(--status-success) !important;
         width: 100%;
-        text-align: center;
     }
 }
